some refactoring and prep work for the response model
