# src/services/request/index.js
@@ -10,9 +10,9 @@ const
     validate = require('uuid-validate'),
     _ = require('lodash');
 
-const logger = log4js.getLogger('Request');
+const logger = log4js.getLogger('request');
 
-class ActivityService {
+class RequestService {
     constructor(store) {
         this._store = store;
     }
@@ -24,24 +24,24 @@ class ActivityService {
         const router = new Router(routerOptions);
         logger.info('initializing request service...');
 
-        router.get('/', this.getRequests.bind(this));
-        router.get('/:uuid', this.getRequestByuuId.bind(this));
-        router.post('/', parser, this.saveRequest.bind(this));
-        router.put('/:uuid', this.updateRequest.bind(this));
-        router.patch('/:action', this.patchRequestProperties.bind(this));
+        router.get('/', this.get.bind(this));
+        router.get('/:uuid', this.getByuuid.bind(this));
+        router.post('/', parser, this.save.bind(this));
+        router.put('/:uuid', this.update.bind(this));
+        router.patch('/:action', this.patchDataProperties.bind(this));
         return router.routes();
     }
 
-    async getRequests(ctx) {
-        logger.debug("getting requests");
+    async get(ctx) {
+        logger.debug("get");
         ctx.assert(_.keysIn(ctx.query).length > 0, 400, "Must contain at least one query string parameter"); 
         const result = await this._store.get(ctx.query);
         ctx.response.body = result;
         return ctx.response.body;
     }
 
-    async getRequestByuuId(ctx) {
-        logger.debug("getting a request");
+    async getByuuid(ctx) {
+        logger.debug("getByuuid");
         ctx.assert(ctx.params.uuid, 400, "'uuid' is not a valid UUID.");
         ctx.assert(validate(ctx.params.uuid), 400, "'uuid' is not a valid UUID.");
         const result = await this._store.getByuuid(ctx.params.uuid);
@@ -50,8 +50,8 @@ class ActivityService {
         return ctx.response.body;
     }
 
-    async saveRequest(ctx) {
-        logger.debug("saving a request");
+    async save(ctx) {        
+        logger.debug("save");
 
         ctx.assert(ctx.request.body.uuid, 400, "'uuid' field is missing.");
         ctx.assert(ctx.request.body.method, 400, "'method' field is missing.");
@@ -61,17 +61,17 @@ class ActivityService {
         // Save and return it
         const response = await this._store.new(ctx.request.body);
         if (response.status / 100 !== 2) {
-            logger.info(`saveRequest uuid: [${ctx.request.body.uuid}] status: [${response.status}], message: [${response.message}]`);
+            logger.info(`save uuid: [${ctx.request.body.uuid}] status: [${response.status}], message: [${response.message}]`);
         } else {
-            logger.info(`saveRequest uuid: [${ctx.request.body.uuid}] status: [${response.status}]`);
+            logger.info(`save uuid: [${ctx.request.body.uuid}] status: [${response.status}]`);
         }
         ctx.response.body = response.message;
         ctx.status = response.status;
         return ctx.response.body;
     }
 
-    async updateRequest(ctx) {
-        logger.debug("update a request");
+    async update(ctx) {
+        logger.debug("update");
 
         ctx.assert(ctx.params.uuid, 400, "'uuid' is not a valid UUID.");
         ctx.assert(validate(ctx.params.uuid), 400, "'uuid' is not a valid UUID.");
@@ -82,9 +82,9 @@ class ActivityService {
         const response = await this._store.update(ctx.request.body, ctx.params.uuid);
 
         if (response.status / 100 !== 2) {
-            logger.info(`updateRequest uuid: [${ctx.request.body.uuid}] status: [${response.status}], message: [${response.message}]`);
+            logger.info(`update uuid: [${ctx.request.body.uuid}] status: [${response.status}], message: [${response.message}]`);
         } else {
-            logger.info(`updateRequest uuid: [${ctx.request.body.uuid}] status: [${response.status}]`);
+            logger.info(`update uuid: [${ctx.request.body.uuid}] status: [${response.status}]`);
         }
 
         ctx.response.body = response.message;
@@ -92,16 +92,13 @@ class ActivityService {
         return ctx.response.body;
     }
 
-    async patchRequestProperties(ctx) {
-        logger.debug("patch request properties");
+    async patchDataProperties(ctx) {
+        logger.debug("patch data properties");
 
         ctx.assert(ctx.params.action, 400, "'action' must be provided");
         ctx.assert(ctx.params.action === "drop", 400, "'action' must be 'drop'");
         ctx.assert(_.keysIn(ctx.query).length > 0, 400, "Must contain at least one query string parameter"); 
         const response = await this._store.dropProperties(ctx.request.body, ctx.query);
-
-        logger.debug(`response: [${util.inspect(response)}]`);
-
         ctx.response.body = response.message;
         ctx.status = response.status;
         return ctx.response.body;
@@ -109,5 +106,5 @@ class ActivityService {
 }
 
 module.exports = {
-    new: () => new ActivityService(Store.new())
+    new: () => new RequestService(Store.new())
 };
